--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./src/styles/root.css" />
+    <link rel="stylesheet" href="./src/styles/style.css" />
     <title>Ghizlan Moqim - Développeur Full-Stack</title>
   </head>
   <body>
     <div class="container">
       <header>
         <img
-          src="https://media.licdn.com/dms/image/v2/D4E35AQEclJAXkhJDsg/profile-framedphoto-shrink_200_200/B4EZnaTZm9J0Ac-/0/1760304143066?e=1761148800&v=beta&t=SQlLzRir9wU9zIDdvg4UpG0sQ3wohxW2Mf7m9RfOkCc"
+          src="./src/images/img.png"
           alt="Ghizlan Moqim"
           class="profile-photo"
         />
