--- a/index.html
+++ b/index.html
@@ -106,73 +106,6 @@
           </div>
         </section>
 
-        <section id="competences">
-          <h2>Compétences & Expertise</h2>
-          <div class="skills-grid">
-            <div class="skill-category">
-              <h3>Web & Frontend/Backend</h3>
-              <ul>
-                <li>HTML, CSS</li>
-                <li>React, Angular</li>
-                <li>Node.js</li>
-                <li>Spring Boot, Symfony</li>
-                <li>Frameworks web modernes</li>
-              </ul>
-            </div>
-
-            <div class="skill-category">
-              <h3>Programmation & BDD</h3>
-              <ul>
-                <li>Python, Java, PHP</li>
-                <li>JavaScript</li>
-                <li>SQL</li>
-                <li>Gestion d'APIs</li>
-                <li>Jenkins</li>
-              </ul>
-            </div>
-
-            <div class="skill-category">
-              <h3>Outils & Environnements</h3>
-              <ul>
-                <li>Git, Docker</li>
-                <li>VS Code, npm, Webpack</li>
-                <li>Bash, SSH</li>
-                <li>Top, Ps, Streamlit</li>
-              </ul>
-            </div>
-
-            <div class="skill-category">
-              <h3>Data & Workflows</h3>
-              <ul>
-                <li>Automatisation des tâches</li>
-                <li>Traitement de données</li>
-                <li>Visualisation de données</li>
-                <li>Intégration d'API</li>
-              </ul>
-            </div>
-
-            <div class="skill-category">
-              <h3>Webmarketing</h3>
-              <ul>
-                <li>Google Ads (AdWords)</li>
-                <li>Google Analytics 4</li>
-                <li>Google Tag Manager</li>
-                <li>SEO/SEA</li>
-                <li>Email marketing</li>
-              </ul>
-            </div>
-
-            <div class="skill-category">
-              <h3>Méthodologies</h3>
-              <ul>
-                <li>Scrum</li>
-                <li>Kanban</li>
-                <li>Environnement agile</li>
-              </ul>
-            </div>
-          </div>
-        </section>
-
         <section id="formation">
           <h2>Formation</h2>
 
@@ -192,6 +125,161 @@
             <div class="job-title">DUT Informatique et Développement</div>
             <div class="company">IUT Orléans</div>
             <div class="date">2020 - 2022</div>
+          </div>
+        </section>
+
+        <section id="competences">
+          <h2>Compétences & Expertise</h2>
+          <div class="skills-slider-container">
+            <div class="skills-grid">
+              <div class="skill-category">
+                <h3>Web & Frontend/Backend</h3>
+                <ul>
+                  <li>HTML, CSS</li>
+                  <li>React, Angular</li>
+                  <li>Node.js</li>
+                  <li>Spring Boot, Symfony</li>
+                  <li>Frameworks web modernes</li>
+                </ul>
+              </div>
+
+              <div class="skill-category">
+                <h3>Programmation & BDD</h3>
+                <ul>
+                  <li>Python, Java, PHP</li>
+                  <li>JavaScript</li>
+                  <li>SQL</li>
+                  <li>Gestion d'APIs</li>
+                  <li>Jenkins</li>
+                </ul>
+              </div>
+
+              <div class="skill-category">
+                <h3>Outils & Environnements</h3>
+                <ul>
+                  <li>Git, Docker</li>
+                  <li>VS Code, npm, Webpack</li>
+                  <li>Bash, SSH</li>
+                  <li>Top, Ps, Streamlit</li>
+                </ul>
+              </div>
+
+              <div class="skill-category">
+                <h3>Data & Workflows</h3>
+                <ul>
+                  <li>Automatisation des tâches</li>
+                  <li>Traitement de données</li>
+                  <li>Visualisation de données</li>
+                  <li>Intégration d'API</li>
+                </ul>
+              </div>
+
+              <div class="skill-category">
+                <h3>Webmarketing</h3>
+                <ul>
+                  <li>Google Ads (AdWords)</li>
+                  <li>Google Analytics 4</li>
+                  <li>Google Tag Manager</li>
+                  <li>SEO/SEA</li>
+                  <li>Email marketing</li>
+                </ul>
+              </div>
+
+              <div class="skill-category">
+                <h3>Méthodologies</h3>
+                <ul>
+                  <li>Scrum</li>
+                  <li>Kanban</li>
+                  <li>Environnement agile</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section id="projets">
+          <h2>Projets Réalisés</h2>
+          <div class="projects-slider-container">
+            <div class="project-grid">
+              <div class="project-category">
+                <h3>Intelligent Document Retrieval System</h3>
+                <div class="project-category-description">
+                  This project aims to develop an advanced document retrieval
+                  system that integrates both traditional text-based search
+                  methods and graph-based approaches. The objective is to
+                  explore how incorporating document relationships within a
+                  graph structure can enhance search relevance and ranking.
+                </div>
+                <div class="project-category-link">
+                  <a
+                    href="https://github.com/Abderrahmane-Ali/Intelligent-Document-Retrieval-System"
+                    target="_blank"
+                    >GitHub</a
+                  >
+                </div>
+              </div>
+
+              <div class="project-category">
+                <h3>Intelligent Document Retrieval System</h3>
+                <div class="project-category-description">
+                  This project aims to develop an advanced document retrieval
+                  system that integrates both traditional text-based search
+                  methods and graph-based approaches. The objective is to
+                  explore how incorporating document relationships within a
+                  graph structure can enhance search relevance and ranking.
+                </div>
+              </div>
+
+              <div class="project-category">
+                <h3>Temporal Data Analysis - Étude des Séries Temporelles</h3>
+                <div class="project-category-description">
+                  Ce projet explore l'analyse des séries temporelles en
+                  utilisant des données réelles liées aux observations des
+                  taches solaires. À travers un notebook Jupyter et un rapport
+                  PDF, il applique des techniques d'analyse temporelle pour
+                  comprendre les tendances, les saisons et les anomalies
+                  présentes dans les données. Ce travail met en lumière des
+                  outils essentiels pour manipuler et analyser des données
+                  temporelles dans des domaines variés.
+                </div>
+              </div>
+
+              <div class="project-category">
+                <h3>Big Data Management avec MapReduce</h3>
+                <div class="project-category-description">
+                  Ce projet illustre l'utilisation de MapReduce pour traiter un
+                  large ensemble de données textuelles. Il compare les
+                  performances entre une méthode séquentielle et une méthode
+                  parallèle, en utilisant le multi-processing pour exploiter
+                  plusieurs cœurs CPU.
+                </div>
+              </div>
+              <div class="project-category">
+                <h3>Big Data Management avec MongoDB</h3>
+                <div class="project-category-description">
+                  Ce projet illustre l'utilisation de MongoDB pour la gestion et
+                  l'analyse de grandes collections de données. À travers des
+                  exemples concrets, il démontre des opérations comme
+                  l'agrégation, les projections, les jointures, et le tri pour
+                  explorer et analyser des jeux de données volumineux.
+                </div>
+              </div>
+              <div class="project-category">
+                <h3>
+                  Optimisation - Implémentation de Lasso avec Descente de
+                  Gradient Stochastique
+                </h3>
+                <div class="project-category-description">
+                  Ce projet explore l'optimisation en utilisant l'algorithme de
+                  descente de gradient stochastique (SGD) appliqué au modèle de
+                  régression Lasso. Il inclut des scripts Python et un notebook
+                  Jupyter pour analyser les performances et visualiser les
+                  résultats. Ce projet est idéal pour comprendre les concepts
+                  fondamentaux des méthodes d'optimisation et leur application
+                  en apprentissage machine.
+                </div>
+              </div>
+            </div>
           </div>
         </section>
 
