--- a/index.html
+++ b/index.html
@@ -117,10 +117,21 @@
           Développeur Full-Stack
         </div>
         <p class="tagline" data-i18n="profile_tagline">
-          Développeur web passionné, je conçois des applications modernes et
-          performantes en front-end et back-end. Fort de plusieurs expériences
-          sur des projets complets, j'aime créer des solutions claires,
-          efficaces et évolutives.
+          Développeur web passionné, je conçois et développe des applications
+          modernes, performantes et adaptées aux besoins des utilisateurs. Grâce
+          à mes expériences sur des projets complets, j’ai acquis une solide
+          maîtrise du développement front-end (interfaces réactives,
+          ergonomiques et accessibles) et back-end (architectures robustes, APIs
+          sécurisées, bases de données optimisées). J’accorde une grande
+          importance à la qualité du code, à la performance et à la scalabilité
+          des solutions que je conçois. J’aime transformer une idée en un
+          produit fonctionnel, clair et évolutif, en utilisant des technologies
+          actuelles comme JavaScript/TypeScript, React, Node.js, Python ou
+          Django selon les besoins du projet. Curieux et rigoureux, j’apprécie
+          le travail en équipe, la collaboration avec des profils variés
+          (designers, data scientists, chefs de projet), et je veille toujours à
+          faire évoluer mes compétences pour proposer des solutions innovantes
+          et durables.
         </p>
         <div class="contact-icons">
           <a href="mailto:moqim.ghizlan@hotmail.com"
