--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
                     <span>Español</span>
                   </button>
                 </li>
+                <li>
+                  <button class="lang-option" data-lang="de" data-flag="🇩🇪">
+                    <span class="lang-flag">🇩🇪</span>
+                    <span>Deutsch</span>
+                  </button>
+                </li>
               </ul>
             </li>
           </ul>
