--- a/index.html
+++ b/index.html
@@ -126,11 +126,15 @@
           <a href="https://linkedin.com/in/moqim-ghizlan" target="_blank"
             >LinkedIn</a
           >
-          <a href="https://github.com/moqim-ghizlan" target="_blank">💻 </a>
+          <a href="https://github.com/moqim-ghizlan" target="_blank"
+            >💻 GitHub</a
+          >
           <a href="https://gitlab.com/moqim.ghizlan" target="_blank"
             >💻 GitLab</a
           >
-          <a href="" download="./cv.pdf" name="cv.pdf" target="_blank">📑 CV</a>
+          <a href="./ghizlan_moqim_cv.pdf" download name="ghizlan_moqim_cv.pdf"
+            >📑 CV</a
+          >
         </div>
       </header>
 
